compiler-core/src/parse/snapshots/rakun_core__parse__tests__unknown_attribute.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 607
expression: "@go_faster()\npub fn main() { 1 }"
---
----- SOURCE CODE
@go_faster()
pub fn main() { 1 }

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:1:1
  │
1 │ @go_faster()
  │ ^^^^^^^^^^ I don't recognise this attribute

Try `deprecated`, `external` or `target` instead.
